; ModuleID = '/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_next_comma_list_entry.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_next_comma_list_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_str = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mg_next_comma_list_entry(i8* %0, %struct.mg_str* %1, %struct.mg_str* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mg_str*, align 8
  %6 = alloca %struct.mg_str*, align 8
  %7 = alloca %struct.mg_str, align 8
  store i8* %0, i8** %4, align 8
  store %struct.mg_str* %1, %struct.mg_str** %5, align 8
  store %struct.mg_str* %2, %struct.mg_str** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @mg_mk_str(i8* %8)
  %10 = load %struct.mg_str*, %struct.mg_str** %5, align 8
  %11 = load %struct.mg_str*, %struct.mg_str** %6, align 8
  %12 = call i8* @mg_next_comma_list_entry_n(i32 %9, %struct.mg_str* %10, %struct.mg_str* %11)
  %13 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %7, i32 0, i32 0
  store i8* %12, i8** %13, align 8
  %14 = getelementptr inbounds %struct.mg_str, %struct.mg_str* %7, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  ret i8* %15
}

declare dso_local i8* @mg_next_comma_list_entry_n(i32, %struct.mg_str*, %struct.mg_str*) #1

declare dso_local i32 @mg_mk_str(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
